<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_color">

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:clickable="true"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_save" />

    <TextView
        android:id="@+id/txt_edit_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/edit_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_go_back" />


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#83FFFBFB"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_prof"
        android:layout_marginBottom="16dp"/>

    <ImageButton
        android:id="@+id/btn_change_prof_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_image_search"
        app:layout_constraintBottom_toTopOf="@id/prof_pic"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/prof_pic"
        android:layout_width="162dp"
        android:layout_height="162dp"
        android:layout_marginTop="61dp"
        android:src="@drawable/def_prof_pic"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_prof"
        app:shapeAppearanceOverlay="@style/circular" />

    <TextView
        android:id="@+id/txt_prof_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_photo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/prof_pic"
        app:layout_constraintStart_toStartOf="@id/prof_pic"
        app:layout_constraintTop_toBottomOf="@id/prof_pic" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_prof_photo" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/user_name"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/btn_add_user_name_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name" />

    <View
        android:id="@+id/below_user_name_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <View
        android:id="@+id/btn_enter_user_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/below_user_name_separator"
        app:layout_constraintTop_toTopOf="@id/name" />

    <View
        android:id="@+id/btn_select_country"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/country"
        app:layout_constraintBottom_toBottomOf="@id/below_select_country_separator"
        app:layout_constraintTop_toTopOf="@id/country" />


    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/country"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/below_user_name_separator" />

    <ImageView
        android:id="@+id/country_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn_select_country_arrow"
        app:layout_constraintTop_toTopOf="@id/select_country"
        app:layout_constraintBottom_toBottomOf="@id/select_country"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/select_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/user_country"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/country"
        app:layout_constraintStart_toStartOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/country" />

    <ImageView
        android:id="@+id/btn_select_country_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/select_country"
        app:layout_constraintEnd_toEndOf="@id/country"
        app:layout_constraintTop_toTopOf="@id/country" />

    <View
        android:id="@+id/below_select_country_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/select_country"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>